코딩리스트 수정

--- a/dev/_codinglist/_components_cl.pug
+++ b/dev/_codinglist/_components_cl.pug
@@ -1,6 +1,25 @@
 
-//- 데이터 영역 인클루드
-include /_codinglist/_components_data
+//- //- 데이터 영역 인클루드
+//- include /_codinglist/_components_data
 
 
-+componentsList()
+//- +componentsList()
+
++cl_table_auto(
+    [
+        [
+            "공통", /* 0. 뎁스1 */
+            "", /* 1. 뎁스2 */
+            "", /* 2. 뎁스3 */
+            "", /* 3. 뎁스4 */
+            "", /* 4. 뎁스5 */
+            "", /* 5. page(ID) */
+            "home/test.html", /* 6. path */
+            "", /* 7. 완료일 */
+            "", /* 8. 상태 */
+            [
+                ["", ""],
+            ],
+        ]
+    ]
+)
