--- a/dev/html/home/index.pug
+++ b/dev/html/home/index.pug
@@ -7,7 +7,7 @@ block contents
     #container.pageClassSub
         #content(role='main')
             .content-inner
-                nav.breadcrumb
+                //-nav.breadcrumb
                     .location-area
                         ol.location-content
                             li
