--- a/dev/css_partials/reset.scss
+++ b/dev/css_partials/reset.scss
@@ -36,7 +36,7 @@ html{
 // max-width 에는 PSD 가로 사이즈 적용하기. 그걸 반으로 나눈 것을 min-width 에 적용하기.
 @media (min-width: 375px) and (max-width: 750px) {
     html {
-        font-size: calc(#{$global-font-size} + 8 * ((100vw - 375px) / 750));
+        font-size: calc(#{$global-font-size - 2} + 10 * ((100vw - 375px) / 750));
     }
 }
 
