--- a/dev/css/_ksc.scss
+++ b/dev/css/_ksc.scss
@@ -26,8 +26,10 @@
             position:relative;
             display:flex;
             @include rem(width, 838px);
-            @include rem(height, 471px);
+            // @include rem(height, 471px);
             background:lightsalmon;
+
+            img {width:100%;}
         }
     }
 
@@ -36,7 +38,7 @@
         border-right:0;
 
         @include rem(width, 838px);
-        @include rem(padding, 37px 32px);
+        @include rem(padding, 39px 32px);
 
         .category {
             @include rem(padding, 3px 11px);
@@ -156,7 +158,7 @@
         display: flex;
         // width:100%;
         @include rem(width, 376px);
-        @include rem(height, 569px);
+        // @include rem(height, 569px);
         @include rem(margin-top, 32px);
         flex-direction: column;
 
@@ -180,7 +182,7 @@
         @include rem(height, 101px);
 
         img {
-            width:100%; height:100%;
+            width:100%;
         }
     }
 
@@ -314,5 +316,68 @@
         .swiper-pagination-progressbar-fill {
             background:#ff6742;
         }
+    }
+}
+
+
+
+@media (max-width:1279px) {
+    .visual-top::after {
+        @include rem(margin-top, 40px);
+    }
+
+    .content-inner,
+    .slide-contents {
+        @include rem(margin-top, 40px);
+    }
+
+    .visual-area {
+        display:block;
+        height:auto;
+    }
+
+    .visual-area .visual-text-box {
+        width:100%;
+        border:0;
+        @include rem(padding, 20px);
+    }
+
+    .visual-area .video .link-content-list {
+        width:100%;
+    }
+
+    .thumbnail-area {
+        display: inherit;
+        @include rem(padding, 0 23px 40px 23px);
+        border:0;
+
+        .thumbnail-list {
+            width: auto;
+            // display: block;
+            flex-direction:unset;
+
+            .swiper-slide {
+                width:auto;
+                height:100% !important;
+                margin-top:0 !important;
+                justify-content: unset;
+            }
+
+        }
+        .thumb-text {
+            display:none;
+        }
+        .thumb-img {
+            width:100%;
+            height:auto;
+        }
+
+        .swiper-button-area {
+            bottom:0;
+        }
+    }
+
+    .title-h3 + .sub-txt {
+        width:auto;
     }
 }
